--- a/src/main/resources/templates/carlist.html
+++ b/src/main/resources/templates/carlist.html
@@ -5,14 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>SpringBoot 用法</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
 </head>
 <body>
 <div class="container">
 <h1>Thymeleaf:Spring Boot自带的前端模板</h1>
 <p th:text="'Hello, '+${cars}+'!'"/>
-<img th:src="@{/images/2.jpg}" th:width="300px" th:height="150px" alt="2">
+<img th:src="@{/images/2.jpg}" th:width="500px" th:height="300px" alt="2">
 
     <h3>标签常用用法</h3>
     <h3>赋值+字符串拼接</h3>
@@ -25,9 +25,9 @@
 
     <hr style="color: deeppink">
     <h3>条件判断 IF|Unless</h3>
-    <span th:if="${car.price==55558}">55558 刚刚好:if 满足条件</span><br>
-    <span th:unless="${car.price==55557}">55558 太贵了:unless 满足条件</span><br>
-    <span th:unless="${car.price==55558}">55558 太贵了:unless 不满足条件</span><br>
+    <span th:if="${car.price==55558}">55558 刚刚好:if 满足条件 </span><br>
+    <span th:unless="${car.price==55557}">55558 太贵了:unless 满足条件 (不满足条件 输出)</span><br>
+    <span th:unless="${car.price==55558}">55558 太贵了:unless 不满足条件 (因为相等 但是unless 是不满足 才输出 )</span><br>
 
     <hr style="color: deeppink">
     <h3>for 循环</h3>
@@ -45,6 +45,52 @@
             <td th:text="${#dates.format(car.createDate,'dd/MMM/yyyy')}">生产日期:</td>
         </tr>
     </table>
+
+    <hr>
+
+    <h1>标准表达式语法</h1>
+    <h3>变量表达式</h3>
+    <!-- session 作用 request 作用于域-->
+   <p style="color: red" th:text="|session:${session.car.name} request:${car.name}|"></p>
+    <tr th:each="car:${session.cars}">
+        <td th:text="${car.name}"></td>
+        <td></td>
+    </tr>
+
+    <ul th:each="car:${cars}">
+        <li th:text="${car.price}"></li>
+    </ul>
+
+    <h3>选择(星号)表达式</h3>
+    <span th:text="*{car.name}"></span>
+    <div th:object="${car}">
+        <span th:text="*{price}"/>
+    </div>
+
+    <h3>URL表达式</h3>
+    <a href="hithymeleaf">原生:</a><br>
+    <a href="hithymeleaf?name=jack">原生带参:</a><br>
+    <a href="hithymeleaf?name=jack&price=120">原生带参:</a><br>
+
+    <a th:href="@{/hithymeleaf}">Hello Thymeleaf</a><br>
+    <a th:href="@{/hithymeleaf?name=jack}">Hello Thymeleaf</a><br>
+    <a th:href="@{/hithymeleaf(name=${car.name})}">Hello Thymeleaf</a><br>
+    <a th:href="@{/hithymeleaf(name=${car.name},price=120)}">Hello Thymeleaf</a><br>
+
+    <hr>
+    <h3>循环 下拉</h3>
+    <select name="subId" id="subId" lay-verify="" >
+        <option value="">请选择</option>
+        <option th:each="car:${cars}"   th:value="${car.id}" th:text="${car.name}"></option>
+    </select>
+
+    <h1>布局</h1>
+    <!-- footer : 被包含的文件名， copy 是被包含文件中的 fragment 名字-->
+    <div th:include="footer::copy"></div>
+    <div th:replace="footer::copy"></div>
+
 </div>
+
+
 </body>
 </html>
