--- a/src/main/resources/templates/carlist.html
+++ b/src/main/resources/templates/carlist.html
@@ -84,6 +84,17 @@
         <option th:each="car:${cars}"   th:value="${car.id}" th:text="${car.name}"></option>
     </select>
 
+    <h3>文字国际化表达式</h3>
+    <p th:text="#{welcome}"></p>
+
+    <li id="i18n">
+        <th:block th:if="${#locale.getCountry().equals('US')}">
+            <a th:attr="href='/carlist?locale=zh_CN'">中文</a>
+        </th:block>
+        <th:block th:if="${#locale.getCountry().equals('CN')}">
+            <a th:attr="href='/carlist?locale=en_US'">English</a>
+        </th:block>
+    </li>
     <h1>布局</h1>
     <!-- footer : 被包含的文件名， copy 是被包含文件中的 fragment 名字-->
     <div th:include="footer::copy"></div>
